fix white space, pw

--- a/warp/css/style.css
+++ b/warp/css/style.css
@@ -39,6 +39,11 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: normal;
   font-style: normal;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 /* line 11, ../../Arafath/CL/january 2020/240. Animal/HTML/scss/_reset.scss */
@@ -6726,7 +6731,7 @@ h6 {
 }
 
 .service_icon_bg_2 {
-  background-image: url(../img/shelters/Las_Piñas_City_seal.png);
+  background-image: url(../img/shelters/Las_Pi単as_City_seal.png);
 }
 .service_icon_bg_3 {
   background-image: url(../img/shelters/Quezon_City.svg.png);
